--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -18,18 +18,24 @@
     <ClCompile Include="Main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CLI.cpp">
+    <ClCompile Include="uiresource.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="gameresource.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CLI.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="std.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="ConsoleColor.h">
+    <ClInclude Include="cli.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="uiresource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="gameresource.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
