Use std::wstring and std::wcout to replace std::string and std::cout to support chinese string. BUG:中文字符串结束后会自动换行

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -140,12 +140,14 @@
   <ItemGroup>
     <ClCompile Include="gameresource.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="supportalgorithm.cpp" />
     <ClCompile Include="uiresource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cli.h" />
     <ClInclude Include="gameresource.h" />
     <ClInclude Include="std.h" />
+    <ClInclude Include="supportalgorithm.h" />
     <ClInclude Include="uiresource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
