Created LICENSE in README.md, 喵！

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="test.h" />
     <ClInclude Include="uiresource.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
